--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "classnames": "^2.2.6",
     "react": "^16.6.1",
     "react-dom": "^16.6.1"
   }
