--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.3.1",
     "parcel-bundler": "^1.10.3",
+    "postcss-modules": "^1.4.1",
     "typescript": "^3.1.6"
   },
   "dependencies": {
