--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@types/classnames": "^2.2.6",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.9",
+    "@types/redux": "^3.6.0",
     "classnames": "^2.2.6",
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1"
   }
 }
