--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "esModuleInterop": true,
     "lib": [
       "dom",
-      "es2015"
+      "es2015",
+      "es2016.array.include"
     ]
   }
 }
