--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^23.3.9",
     "autoprefixer": "^9.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.6.0",
     "parcel-bundler": "^1.10.3",
     "postcss-modules": "^1.4.1",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.1.6"
   },
   "dependencies": {
@@ -27,5 +32,22 @@
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "\\.spec\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "moduleNameMapper": {
+      "^.*\\.styl$": "<rootDir>/style-mock.ts"
+    }
   }
 }
