--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "dependencies": {
     "@types/classnames": "^2.2.6",
+    "@types/lz-string": "^1.3.32",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-redux": "^6.0.9",
     "@types/redux": "^3.6.0",
     "classnames": "^2.2.6",
+    "lz-string": "^1.4.4",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.0",
