--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "check-types": "tsc --noEmit",
     "start": "parcel index.html",
     "build": "parcel build index.html",
     "test": "jest"
@@ -12,8 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^23.3.9",
     "@types/classnames": "^2.2.6",
+    "@types/jest": "^26.0.14",
     "@types/lz-string": "^1.3.32",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
@@ -21,10 +22,10 @@
     "@types/redux": "^3.6.0",
     "autoprefixer": "^9.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
+    "jest": "^26.4.2",
     "parcel-bundler": "^1.10.3",
     "postcss-modules": "^3.2.2",
-    "ts-jest": "^23.10.4",
+    "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
